--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <section class="section_2">
             <div class="container">
                 <h2 class="tovar">
-                    #TOVARI
+                    #TOVARI 
                 </h2>
 
                 <p class="text_tovar">
@@ -177,7 +177,7 @@
                         </h2>
 
                         <p class="ipsum">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.
+                            Lorshajdjaem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.
                         </p>
 
                         <p class="box"></p>
